<resources>
    <string name="app_name">IVPN</string>
    <string name="send_logs">Send an email with logs via</string>
    <string name="tutorial_page_title_locations">Popular locations</string>
    <string name="tutorial_page_title_access">All device access</string>
    <string name="tutorial_page_title_security">Security</string>
    <string name="tutorial_page_descr_locations">IVPN offers 20+ locations with fast gigabit connections</string>
    <string name="tutorial_page_descr_access">Use your IVPN account on all your devices, we support Windows, Mac, iOS, Android and Linux</string>
    <string name="tutorial_page_descr_security">Get <b>serious</b> privacy protection and peace of mind</string>
    <string name="tutorial_log_in">LOG IN TO MY ACCOUNT</string>
    <string name="tutorial_start_free_trial">START MY FREE TRIAL</string>
    <string name="sign_in_username_hint"><font size="15">Account ID</font></string>
    <string name="sign_up_start_trial">START MY FREE TRIAL</string>
    <string name="sign_up_hint">Email address</string>
    <string name="sign_up_no_password_error">The password field is required.</string>
    <string name="sign_up_wrong_email_format">The format of your email address is not correct.</string>
    <string name="sign_up_unknown_error">Unknown error, please contact support and send logs</string>
    <string name="settings_server">Server</string>
    <string name="settings_about">About</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_logging">Logging</string>
    <string name="settings_connectivity">Connectivity</string>
    <string name="settings_ipv6">IPv6</string>
    <string name="settings_other">Advanced settings</string>
    <string name="settings_terms_of_service">Terms of service</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_version">VERSION</string>
    <string name="settings_color_theme">Color theme</string>
    <string name="settings_app_icon">App icon</string>
    <string name="settings_enable_logging">Enable logging</string>
    <string name="settings_enable_multi_hop">Multi-hop connection</string>
    <string name="settings_multihop_same_provider_title">Multi-hop same provider restriction</string>
    <string name="settings_multihop_same_provider_description">Allow to use servers from the same provider to build Multi-hop chain.</string>
    <string name="settings_select_host">Select individual servers</string>
    <string name="settings_select_host_description">Enable selection of individual servers in server selection list</string>
    <string name="settings_kill_switch">Kill switch</string>
    <string name="setting_anti_surveillance">AntiTracker</string>
    <string name="setting_custom_dns">Custom DNS</string>
    <string name="settings_multi_hop_description">You will be redirected through 2 servers.</string>
    <string name="settings_port_label">Preferred port</string>
    <string name="settings_preferred_protocol_label">Preferred protocol</string>
    <string name="settings_send_logs">SEND LOGS</string>
    <string name="settings_split_tunneling">Split tunneling</string>
    <string name="settings_do_not_collect_your_data">We can\'t see these until you send them to us.</string>
    <string name="settings_split_tunneling_description">Choose which apps you want to use with IVPN.</string>
    <string name="settings_kill_switch_description">Allow using internet only when IVPN connection is enabled.</string>
    <string name="settings_always_on_vpn_description">Can help to improve protection.</string>
    <string name="settings_anti_surveillance_description">Configure ad, malware, and tracker blocking.</string>
    <string name="settings_custom_dns_description">Specify DNS server when connected to VPN.</string>
    <string name="settings_updates_title">Updates</string>
    <string name="settings_mock_location_title">Mock Location</string>
    <string name="settings_mock_location_description">Match your GPS location to your VPN location.</string>
    <string name="settings_local_bypass_title">Bypass VPN for local networks</string>
    <string name="settings_local_bypass_description">Networks directly connected to the local interfaces will not be routed over the VPN.</string>
    <string name="settings_ipv6_title">IPv6 for WireGuard VPN</string>
    <string name="settings_ipv6_filter_title">Show servers without IPv6 support</string>
    <string name="settings_ipv6_description">You will receive an IPv6 address even if your ISP doesn\'t provide it for you.</string>
    <string name="settings_ipv6_filter_description">Servers with IPv6 support will have a special badge in the server list.</string>
    <string name="kill_switch_vpn">VPN Kill switch</string>
    <string name="kill_switch_vpn_description">Disables internet access when VPN connection drops</string>
    <string name="kill_switch_native">Android native Kill Switch</string>
    <string name="kill_switch_native_description">Kill Switch prevents your device from making external connections if you are disconnected from the VPN, keeping your internet traffic secure.\n\nTo enable it
        select <u><b>Always on VPN</b></u> and <u><b>Block connections without VPN</b></u> in the device settings. \n\nPlease note that native Kill Switch ignores IVPN Split Tunneling settings.</string>
    <string name="settings_protocol_selection_description">Choose VPN protocol and associated with it settings.</string>
    <string name="settings_vpn_protocol">VPN protocol</string>
    <string name="snackbar_to_use_vpn_bypass_disconnect">To use VPN bypass, please disconnect first</string>
    <string name="snackbar_to_use_mock_location_disconnect">To use Mock Locations, please disconnect first</string>
    <string name="snackbar_to_ipv6_location_disconnect">To use IPv6, please disconnect first</string>
    <string name="snackbar_to_use_antitracker_disconnect">To use AntiTracker, please disconnect first</string>
    <string name="snackbar_to_use_custom_dns_disconnect">To use Custom DNS, please disconnect first</string>
    <string name="snackbar_to_use_kill_switch_disconnect">To use Kill switch, please disconnect first</string>
    <string name="snackbar_to_use_split_tunneling_disconnect">To use split tunneling, please disconnect first</string>
    <string name="snackbar_to_change_protocol_disconnect">To change protocol, please disconnect first</string>
    <string name="snackbar_to_change_port_disconnect_first_msg">To change port please disconnect first</string>
    <string name="snackbar_to_change_mtu_disconnect_first">To change MTU please disconnect first</string>
    <string name="snackbar_to_change_multihop_disconnect_first_msg">To change Multi-hop settings please disconnect first</string>
    <string name="snackbar_multihop_not_allowed_for_wg">Multi-hop is not available for WireGuard right now</string>
    <string name="snackbar_new_try_with_different_port">Connection to server blocked, reconnecting on a different port. Please wait until connection is established.</string>
    <string name="snackbar_disconnect_first">DISCONNECT</string>
    <string name="settings_package">package:</string>
    <string name="settings_always_on_vpn_title">Always-on VPN</string>
    <string name="settings_start_on_boot_title">Start on system boot</string>
    <string name="settings_start_on_boot_description">Enable VPN connection on system boot.</string>
    <string name="settings_always_on_vpn_note">This feature enables you to automatically establish a VPN connection after the device boots. It should be manually enabled from the device settings inside the IVPN app profile. In addition, to prevent data leaks we recommend enabling \"Block connections without VPN\" from within the IVPN app profile.</string>
    <string name="settings_always_on_vpn_action">Go to settings</string>
    <string name="settings_trusted_wifi_title">Network protection</string>
    <string name="settings_trusted_wifi_description">Configure how IVPN will behave on connection to Wi-Fi or mobile networks.</string>
    <string name="start_on_boot_description">Due to system restrictions the vpn may take up to 1 minute to connect after system boot.</string>
    <string name="start_on_boot_brand_restrictions">Some vendors might require you to provide additional permission to allow app Autostart on boot</string>
    <string name="start_on_boot_read_more">read more</string>
    <string name="settings_color_theme_light">Light</string>
    <string name="settings_color_theme_dark">Dark</string>
    <string name="settings_color_theme_amoled_black">Pure Black</string>
    <string name="settings_color_theme_system_default">System default</string>
    <string name="settings_color_theme_system_by_battery">By battery</string>
    <string name="updates_info_title">Updates</string>
    <string name="updates_current_version">Current version</string>
    <string name="updates_version_up_to_date">You are using the latest version</string>
    <string name="updates_check_for_updates">Check for updates</string>
    <string name="updates_new_version_available">New version available</string>
    <string name="updates_proceed">Download</string>
    <string name="updates_updates_settings">Settings</string>
    <string name="update_check_auto_for_update">Check automatically for updates</string>
    <string name="notification_update_title">IVPN update available</string>
    <string name="notification_update_message">Install the latest version of IVPN to ensure your privacy and security</string>
    <string name="notification_update_proceed">Download</string>
    <string name="notification_update_skip">Skip</string>
    <string name="notification_update_settings">Settings</string>
    <string name="notification_update_channel">IVPN updates channel</string>
    <string name="anti_surveillance_enable_title">Enable AntiTracker</string>
    <string name="network_untrusted_label">Untrusted networks</string>
    <string name="network_trusted_label">Trusted networks</string>
    <string name="network_untrusted_action">Perform the following actions when joining untrusted networks:</string>
    <string name="network_connect_to_vpn">Connect to IVPN</string>
    <string name="network_trusted_action">Perform the following actions when joining trusted networks:</string>
    <string name="network_disconnect_from_vpn">Disconnect from IVPN</string>
    <string name="dialogs_cancel">CANCEL</string>
    <string name="dialogs_advanced_kill_switch_title">Block connections outside VPN</string>
    <string name="dialogs_advanced_kill_switch_description">Use the internal Android kill-switch to increase your security. This option needs to be manually enabled in the device settings.</string>
    <string name="dialogs_advanced_kill_switch_not_show_again">Don’t show this again</string>
    <string name="dialogs_advanced_kill_switch_navigate_to_settings">Settings</string>
    <string name="dialogs_advanced_kill_switch_cancel">Cancel</string>
    <string name="dialogs_time_picker_title">Your IVPN connection will automatically resume in</string>
    <string name="dialogs_five_minutes">5 minutes</string>
    <string name="dialogs_fifteen_minutes">15 minutes</string>
    <string name="dialogs_one_hour">1 hour</string>
    <string name="dialogs_custom_delay">Custom delay</string>
    <string name="dialogs_apply_action">Apply</string>
    <string name="protocol_wg_mtu">MTU</string>
    <string name="protocol_wg_mtu_description">Valid range [1280 - 65535]. Please note that changing this value may affect the proper functioning of the VPN tunnel.</string>
    <string name="protocol_wg_mtu_hint">1280 - 65535</string>
    <string name="shortcuts_connect">Connect</string>
    <string name="shortcuts_establish_vpn_connection">Establish VPN connection</string>
    <string name="shortcuts_disconnect">Disconnect</string>
    <string name="shortcuts_disconnect_description">Disconnect from IVPN</string>
</resources>