<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="6sp"
        android:text="@string/dialogs_time_picker_title"
        android:textColor="@color/dialogue_title"
        android:textSize="18sp"
        android:textStyle="normal" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/first_variant"
            style="@style/AppTheme.RadioButton.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogs_five_minutes"
            android:textColor="@color/dialogue_text"
            android:theme="@style/AppTheme.RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/second_variant"
            style="@style/AppTheme.RadioButton.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialogs_fifteen_minutes"
            android:textColor="@color/dialogue_text"
            android:theme="@style/AppTheme.RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/third_variant"
            style="@style/AppTheme.RadioButton.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialogs_one_hour"
            android:textColor="@color/dialogue_text"
            android:theme="@style/AppTheme.RadioButton" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/custom_variant"
            style="@style/AppTheme.RadioButton.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialogs_custom_delay"
            android:textColor="@color/dialogue_text"
            android:theme="@style/AppTheme.RadioButton" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="27dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:text="@string/dialogs_cancel"
            android:textAllCaps="true"
            android:textColor="#398fe6"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:text="@string/dialogs_apply_action"
            android:textAllCaps="true"
            android:textColor="#398fe6"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>