<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dialogue_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/illustration_prompt_kill_switch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="6sp"
        android:text="@string/dialogs_advanced_kill_switch_title"
        android:textColor="@color/dialogue_title"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/dialogs_advanced_kill_switch_description"
        android:textColor="@color/dialogue_text"
        android:textSize="16sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/dialogs_advanced_kill_switch_not_show_again"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textColor="@color/dialogue_text"
        app:buttonTint="@color/primary"
        app:theme="@style/AppTheme.CheckBox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="27dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:layout_marginEnd="25dp"
            android:text="@string/dialogs_advanced_kill_switch_cancel"
            android:textAllCaps="true"
            android:textColor="#398fe6"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/openSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:text="@string/dialogs_advanced_kill_switch_navigate_to_settings"
            android:textAllCaps="true"
            android:textColor="#398fe6"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>