<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mtuValue"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dialogue_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/protocol_wg_mtu"
            android:textColor="@color/custom_dns_text_color"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/mtu_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/protocol_wg_mtu_hint"
            android:textColorHint="@color/servers_text_color_hint"
            android:inputType="number"
            android:maxLength="5"
            android:gravity="center"
            android:theme="@style/EditTextTheme"
            android:textColor="@color/custom_dns_text_color"
            android:text="@{mtuValue}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:alpha="0.7"
            android:text="@string/protocol_wg_mtu_description"
            android:textSize="12sp"
            android:textColor="@color/custom_dns_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="19dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:letterSpacing="0.04"
                android:padding="5dp"
                android:text="@string/dialogs_cancel"
                android:textAllCaps="true"
                android:textColor="@color/dialogue_button"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/apply_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:letterSpacing="0.04"
                android:padding="5dp"
                android:text="@string/dialogs_apply_action"
                android:textAllCaps="true"
                android:textColor="@color/dialogue_button"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</layout>
