<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/always_on_background"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="@dimen/settings_margin_left"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/settings_always_on_vpn_title"
                android:textColor="@color/always_on_title"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                style="@style/SettingsOptionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/settings_always_on_vpn_note"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <TextView
            android:id="@+id/to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_margin_left"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.04"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/settings_always_on_vpn_action"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</layout>