<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="net.ivpn.core.v2.network.rule.NetworkRuleViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/network_protection_background"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/network_protection_background" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/network_protection_card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/network_protection_card_background"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/network_untrusted_label"
                    android:textColor="@color/network_protection_text_color"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/network_untrusted_action"
                    android:textColor="@color/network_protection_text_color"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="@{viewmodel.isConnectToVpnRuleApplied}"
                    android:paddingLeft="8dp"
                    android:text="@string/network_connect_to_vpn"
                    android:textColor="@color/network_protection_text_color_opacity"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:buttonTint="@color/primary"
                    app:onChanged="@{viewmodel.connectToVpnRuleChangeListener}" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/color_settings_background" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/network_protection_card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/network_protection_card_background"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/network_trusted_label"
                    android:textColor="@color/network_protection_text_color"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/network_trusted_action"
                    android:textColor="@color/network_protection_text_color"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="@{viewmodel.isDisconnectFromVpnRuleApplied}"
                    android:paddingLeft="8dp"
                    android:text="@string/network_disconnect_from_vpn"
                    android:textColor="@color/network_protection_text_color_opacity"
                    android:textSize="14sp"

                    android:textStyle="normal"
                    app:buttonTint="@color/primary"
                    app:onChanged="@{viewmodel.disconnectFromVpnRuleChangeListener}" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_settings_background" />
    </LinearLayout>
</layout>